--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <link rel="icon" type="image/png" sizes="512x512" href="/All_Files_Viewer/favicon512.png" />
 
   <!-- Brand Web Manifest (Optional PWA Support) -->
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="/All_Files_Viewer/manifest.json" />
 
   <!-- Structured Data (SEO Boost) -->
   <script type="application/ld+json">
